# ClangTuner

./: .gitignore  CMakeLists.txt
clang/include/clang/Basic/: Attr.td  AttrDocs.td
clang/lib/Sema/: SemaStmtAttr.cpp
mlir/examples/toy/Ch5/: CMakeLists.txt
mlir/include/mlir/: InitAllDialects.h  InitAllPasses.h
mlir/include/mlir/Conversion/: Passes.h  Passes.td
mlir/include/mlir/Conversion/LinalgToLuminous/: LinalgToLuminous.h
mlir/include/mlir/Conversion/SCFToLuminous/: SCFToLuminous.h  SCFToLuminousPass.h
mlir/include/mlir/Dialect/: CMakeLists.txt
mlir/include/mlir/Dialect/Linalg/: Passes.h  Passes.td
mlir/include/mlir/Dialect/Linalg/Analysis/: MemoryFootprintReductionAnalysis.h
mlir/include/mlir/Dialect/Linalg/Transforms/: BufferizableOpInterfaceImpl.h  Transforms.h
mlir/include/mlir/Dialect/Luminous/: CMakeLists.txt  LuminousDialect_arch.md  Passes.h  Passes.td
mlir/include/mlir/Dialect/Luminous/IR/: CMakeLists.txt  LuminousDialect.h  LuminousDialect.td  LuminousOps.td  LuminousTypes.h  LuminousTypes.td
mlir/lib/Conversion/: CMakeLists.txt  PassDetail.h
mlir/lib/Conversion/LinalgToLuminous/: CMakeLists.txt  LinalgToLuminous.cpp
mlir/lib/Conversion/SCFToLuminous/: CMakeLists.txt  SCFToLuminous.cpp  SCFToLuminousPass.cpp
mlir/lib/Dialect/: CMakeLists.txt
mlir/lib/Dialect/Async/Transforms/: AsyncParallelFor.cpp
mlir/lib/Dialect/GPU/IR/: GPUDialect.cpp
mlir/lib/Dialect/Linalg/Analysis/: CMakeLists.txt  MemoryFootprintReductionAnalysis.cpp
mlir/lib/Dialect/Linalg/Transforms/: BufferizableOpInterfaceImpl.cpp  CMakeLists.txt  MemoryFootprintReduction.cpp  OpExtraction.cpp  Tiling.cpp
mlir/lib/Dialect/Luminous/IR/: CMakeLists.txt  Luminous.cpp
mlir/lib/Dialect/Luminous/Transforms/: CMakeLists.txt  KernelOutlining.cpp  PassDetail.h
mlir/lib/Transforms/Utils/: GreedyPatternRewriteDriver.cpp
mlir/test/Conversion/LinalgToLuminous/: linalg_launch.mlir
mlir/test/Conversion/SCFToLuminous/: parallel_loop.mlir
mlir/test/Dialect/Linalg/: reduce-memref-footprint.mlir
mlir/test/Dialect/Luminous/: kernel-outlining.mlir  ops.mlir
mlir/test/python/dialects/linalg/: footprint_reduce_test.py
mlirBuild/: CMakeCache.txt
tuner/: .gitignore  AttrForLoopArgumentFinder.cpp  AttrForLoopArgumentFinder.h  AttrForLoopFinder.cpp  AttrForLoopFinder.h  AttrForLoopFunctionDeclarator.cpp  AttrForLoopFunctionDeclarator.h  AttrForLoopRefactorer.cpp  AttrForLoopRefactorer.h  CMakeLists.txt  ClangTuner.pptx  CodeGen.cpp  CodeGen.h  CommandLineOpts.h  DevelopmentNotes  Driver.cpp  Driver.h  FindAttrStmts.cpp  FindAttrStmts.h  FindTuneAttr.cpp  FindTuneAttr.h  ForLoopRefactorer.cpp  ForLoopRefactorer.h  FunctionCreator.cpp  FunctionCreator.h  IOUtils.h  LockableObject.h  LoopInputFinder.cpp  LoopInputFinder.h  MLIRCodeGenerator.cpp  MLIRCodeGenerator.h  MLIRTypeGenerator.cpp  MLIRTypeGenerator.h  OpenMPConfigurer.cpp  OpenMPConfigurer.h  OptimizationDriver.cpp  OptimizationDriver.h  ParallelizingPass.cpp  ParallelizingPass.h  SemaCheck.cpp  (+6 more)
tuner/Benchmarks/SPAPT/: utils.hpp
tuner/Benchmarks/SPAPT/axpy/: a.out  axpy.cpp  axpy.cpp.ll  axpy.cpp_for_loops.ll  axpy.cpp_for_loops.mlir  axpy.cpp_for_loops_opt.mlir  axpy.cpp_llvm_dialect.mlir  axpy.cpp_refactored.cpp  axpy.cpp_refactored.ll  compile_commands.json  tmp.ll  tmp1.ll
tuner/Benchmarks/SPAPT/matrix-matrix-multiply/: a.out  compile_commands.json  mm-dynamic-array.cpp  mm-static-array.cpp  mm-static-array.cpp_refactored.cpp
tuner/Benchmarks/SPAPT/matrix-matrix-multiply/a.out.dSYM/Contents/Resources/DWARF/: a.out
tuner/Benchmarks/SPAPT/matrix-vector-multiply/: a.out  clang-generated  clang-generated.s  compile_commands.json  mv-static-array.cpp  mv-static-array.cpp.ll  mv-static-array.cpp_for_loops.ll  mv-static-array.cpp_for_loops.mlir  mv-static-array.cpp_for_loops_opt.mlir  mv-static-array.cpp_llvm_dialect.mlir  mv-static-array.cpp_parallel_for_loops.mlir  mv-static-array.cpp_refactored.cpp  mv-static-array.cpp_refactored.ll  mv-static-array.ll  tmp.ll  tmp1.ll
tuner/Benchmarks/SPAPT/matrix-vector-multiply/a.out.dSYM/Contents/Resources/DWARF/: a.out
tuner/examples/: a.out  compile_commands.json  cuda-attr-test.cpp  cuda-attr-test.cpp.ll  cuda-attr-test.cpp.s  forloop.bc  forloop.mlir  forloop.s  forloop_llvm.mlir  forloop_scf.mlir  generatedcode.mlir  myforloop.cpp  myforloop.ll  myforloop.s  refactored_file.cpp  refactored_file.ll
tuner/include/: CMakeLists.txt  SupportedStmts.def
tuner/include/ClangTune/: CMakeLists.txt  ClangTune.td  Dialect.h  MLIRGen.h
tuner/include/clangtuner/: AttrForLoopRefactorer.h  CMakeLists.txt
tuner/include/clangtuner/ADT/: LockableObject.h
tuner/include/clangtuner/MLIRCodeGen/: MLIRCodeGenerator.h  MLIRTypeGenerator.h
tuner/include/clangtuner/Sema/: SupportedStmtsChecker.h
tuner/lib/MLIRCodeGen/: CMakeLists.txt  MLIRCodeGenerator.cpp  MLIRTypeGenerator.cpp
tuner/mlir/: Dialect.cpp  MLIRGen.cpp
